Resolve final merge conflicts in AppConfig and application.properties