@@ -1,12 +1,11 @@
 package com.vaibhav.config;
 
-<<<<<<< HEAD
-=======
-
 import org.springframework.beans.factory.annotation.Value;
->>>>>>> e97625f (Fix Render deployment: database environment variables, CORS origins, and email sender identity)
+import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.Ordered;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -16,20 +15,13 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
 import org.springframework.web.client.RestTemplate;
-import org.springframework.http.HttpMethod;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
-import org.springframework.boot.web.servlet.FilterRegistrationBean;
-import org.springframework.core.Ordered;
 
-<<<<<<< HEAD
-import java.util.List;
-=======
 import java.util.Arrays;
-import java.util.Collections;
->>>>>>> e97625f (Fix Render deployment: database environment variables, CORS origins, and email sender identity)
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -43,7 +35,7 @@ public class AppConfig {
         http.sessionManagement(management -> management.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(authorize ->
                         authorize
-                                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // 🔥 VERY IMPORTANT for preflight
+                                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                                 .requestMatchers("/auth/**", "/home/**", "/users/**", "/api/products/*/reviews").permitAll()
                                 .requestMatchers("/api/**").authenticated()
                                 .anyRequest().permitAll()
@@ -57,33 +49,21 @@ public class AppConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-<<<<<<< HEAD
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
-        config.setAllowedOrigins(List.of(
+        config.setAllowedOrigins(Arrays.asList(
             "https://ecommerce-multivendor-37j4.onrender.com",
             "https://ecommerce-8frp.onrender.com",
             "http://localhost:3000",
-            "http://localhost:5173"
+            "http://localhost:5173",
+            frontendUrl
         ));
-        config.setAllowedMethods(List.of(
+        config.setAllowedMethods(Arrays.asList(
             "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
         ));
         config.setAllowedHeaders(List.of("*"));
         config.setExposedHeaders(List.of("Authorization"));
-=======
-        CorsConfiguration cfg = new CorsConfiguration();
-        cfg.setAllowedOrigins(Arrays.asList(
-                "http://localhost:3000",
-                "https://ecommerce-multivendor-37j4.onrender.com",
-                frontendUrl
-        ));
-        cfg.setAllowedMethods(Collections.singletonList("*"));
-        cfg.setAllowedHeaders(Collections.singletonList("*"));
-        cfg.setAllowCredentials(true);
-        cfg.setExposedHeaders(Collections.singletonList("Authorization"));
-        cfg.setMaxAge(3600L);
->>>>>>> e97625f (Fix Render deployment: database environment variables, CORS origins, and email sender identity)
+        config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
@@ -94,7 +74,7 @@ public class AppConfig {
     public FilterRegistrationBean<CorsFilter> corsFilterRegistration() {
         FilterRegistrationBean<CorsFilter> bean =
                 new FilterRegistrationBean<>(new CorsFilter(corsConfigurationSource()));
-        bean.setOrder(Ordered.HIGHEST_PRECEDENCE); // 🔥 VERY IMPORTANT
+        bean.setOrder(Ordered.HIGHEST_PRECEDENCE);
         return bean;
     }
 
